<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/backgr">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english_title"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:textSize="30dp"
        android:textColorHint="@color/cardview_dark_background"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">




        <Button
            android:id="@+id/btnalpha"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/butn"
            android:onClick="btnAlphabet"
            android:text="@string/alphabet_title"
            android:layout_marginTop="70dp"/>

        <Button
            android:id="@+id/btnnum"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/butn"
            android:onClick="btnNumber"
            android:text="@string/number_english" />

        <ImageView

            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/qq" />
        <Button
            android:id="@+id/btnPratice"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/butn"
            android:text="@string/pratice_english"
            android:layout_marginTop="2dp"
            android:onClick="btnPratice"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp">

            <ImageView


                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/qq">

            </ImageView>
            <ImageView

                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/qq" />

            <ImageView

                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/qq" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>

