<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@mipmap/backgr">

    <LinearLayout
        android:id="@+id/layoutTopics"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:background="@color/activity_practice_line">
        <!--android:onClick="showChooseTopic"-->

        <TextView
            android:id="@+id/tvTopics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/mul_edu"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/muiten"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/tvCurrentOverTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_gravity="center_horizontal"
        android:text="10/30"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/activity_practice_line"/>

    <android.support.v4.view.ViewPager
    android:id="@+id/vpPctnc"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="SCORE"
                android:textSize="30dp"
                android:textColor="#0B0B0B"
                android:gravity="center"

                android:background="@color/activity_practice_line"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="100"
                android:textSize="30dp"
                android:gravity="center"
                android:textColor="#0B0B0B"
                android:background="@drawable/app_bar_background"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edtResultp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_edu"/>
            <Button

                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ok"
                android:textSize="20dp"
                android:onClick="checkp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
